# gpt4science

./: .gitignore  LICENSE  pyproject.toml  tasks.py
gpt4science/: main.py  settings.py  tools.py
gpt4science/data/: creatine.json  test_paper.json  test_paper_full.json
gpt4science/prompting/: prompts.py  templates.py
gpt4science/research/: main.ipynb  main.py  models.py  schemas.py
gpt4science/structure/: main.py  models.py  prompts.py  qwe.json  schemas.py  tools.py
gpt4science/utils/: prompt_templates.py
